// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Sidebar -  renders 1`] = `
<div
  className="sidebar"
  id="test"
>
  <InputGroup
    id="sidebar-search"
    placeholder="Search..."
    prefixType="icon"
    prefixValue="search"
    type="text"
  />
   
  


  <nav
    className="sidebar-nav"
  >
    <ul
      className="main-nav-ul"
    >
      <div
        className="nav-group"
        key="0"
      >
        <div
          className="nav-group-heading"
        >
          <i
            className="material-icons"
          >
            arrow_right
          </i>
          <span>
            Introduction
          </span>
        </div>
        <ul
          className="nav-ul"
        >
          <li
            className="nav-leaf"
            key="0"
          >
            <a
              href="#"
              onClick={[Function]}
            >
              Introduction 1
            </a>
          </li>
          <li
            className="nav-leaf"
            key="1"
          >
            <a
              href="#"
              onClick={[Function]}
            >
              Introduction 2
            </a>
          </li>
          <li
            className="nav-leaf"
            key="2"
          >
            <a
              href="#"
              onClick={[Function]}
            >
              Introduction 3
            </a>
          </li>
        </ul>
      </div>
      <div
        className="nav-group"
        key="1"
      >
        <div
          className="nav-group-heading"
        >
          <i
            className="material-icons"
          >
            arrow_right
          </i>
          <span>
            Other features
          </span>
        </div>
        <ul
          className="nav-ul"
        >
          <li
            className="nav-subgroup"
            key="0"
          >
            <div
              className="nav-subgroup-heading"
            >
              <i
                className="material-icons"
              >
                arrow_right
              </i>
              <span>
                Operations
              </span>
            </div>
            <ul
              className="nav-ul"
            >
              <li
                className="nav-leaf"
                key="0"
              >
                <a
                  href="#"
                  onClick={[Function]}
                >
                  Operations
                </a>
              </li>
              <li
                className="nav-leaf"
                key="1"
              >
                <a
                  href="#"
                  onClick={[Function]}
                >
                  Lorem ipsum
                </a>
              </li>
              <li
                className="nav-leaf"
                key="2"
              >
                <a
                  href="#"
                  onClick={[Function]}
                >
                  Dolor sit amet consectetur
                </a>
              </li>
              <li
                className="nav-leaf"
                key="3"
              >
                <a
                  href="#"
                  onClick={[Function]}
                >
                  Adipiscing elit
                </a>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </ul>
  </nav>
</div>
`;

exports[`Component: Sidebar -  renders group with one level when one level is provided 1`] = `
<div
  className="sidebar"
  id="test"
>
  <InputGroup
    id="sidebar-search"
    placeholder="Search..."
    prefixType="icon"
    prefixValue="search"
    type="text"
  />
   
  


  <nav
    className="sidebar-nav"
  >
    <ul
      className="main-nav-ul"
    >
      <div
        className="nav-group"
        key="0"
      >
        <div
          className="nav-group-heading"
        >
          <i
            className="material-icons"
          >
            arrow_right
          </i>
          <span>
            Introduction
          </span>
        </div>
        <ul
          className="nav-ul"
        >
          <li
            className="nav-leaf"
            key="0"
          >
            <a
              href="#"
              onClick={[Function]}
            >
              Introduction 1
            </a>
          </li>
          <li
            className="nav-leaf"
            key="1"
          >
            <a
              href="#"
              onClick={[Function]}
            >
              Introduction 2
            </a>
          </li>
          <li
            className="nav-leaf"
            key="2"
          >
            <a
              href="#"
              onClick={[Function]}
            >
              Introduction 3
            </a>
          </li>
        </ul>
      </div>
    </ul>
  </nav>
</div>
`;

exports[`Component: Sidebar -  renders group with two levels when two levels is provided 1`] = `
<div
  className="sidebar"
  id="test"
>
  <InputGroup
    id="sidebar-search"
    placeholder="Search..."
    prefixType="icon"
    prefixValue="search"
    type="text"
  />
   
  


  <nav
    className="sidebar-nav"
  >
    <ul
      className="main-nav-ul"
    >
      <div
        className="nav-group"
        key="0"
      >
        <div
          className="nav-group-heading"
        >
          <i
            className="material-icons"
          >
            arrow_right
          </i>
          <span>
            Other features
          </span>
        </div>
        <ul
          className="nav-ul"
        >
          <li
            className="nav-subgroup"
            key="0"
          >
            <div
              className="nav-subgroup-heading"
            >
              <i
                className="material-icons"
              >
                arrow_right
              </i>
              <span>
                Operations
              </span>
            </div>
            <ul
              className="nav-ul"
            >
              <li
                className="nav-leaf"
                key="0"
              >
                <a
                  href="#"
                  onClick={[Function]}
                >
                  Operations
                </a>
              </li>
              <li
                className="nav-leaf"
                key="1"
              >
                <a
                  href="#"
                  onClick={[Function]}
                >
                  Lorem ipsum
                </a>
              </li>
              <li
                className="nav-leaf"
                key="2"
              >
                <a
                  href="#"
                  onClick={[Function]}
                >
                  Dolor sit amet consectetur
                </a>
              </li>
              <li
                className="nav-leaf"
                key="3"
              >
                <a
                  href="#"
                  onClick={[Function]}
                >
                  Adipiscing elit
                </a>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </ul>
  </nav>
</div>
`;
